[build-system]
requires = ["flit_scm"]
build-backend = "flit_scm:buildapi"

[project]
name = "nipreps_versions"
description = "Version schemes for nipreps tools"
authors = [{name = "Chris Markiewicz", email = "markiewicz@stanford.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Version Control",
  "Topic :: System :: Software Distribution",
  "Topic :: Utilities",
]
dynamic = ["version"]
dependencies = [
  "setuptools_scm >=7",
  "packaging",
]
requires-python = ">=3.7"

[project.urls]
Home = "https://github.com/nipreps/version-schemes"
"Nipreps" = "https://www.nipreps.org"

[project.entry-points."setuptools_scm.version_scheme"]
nipreps-calver = "nipreps_versions.schemes:nipreps_calver"

[tool.flit.sdist]
include = ["tox.ini", "tests/*.py"]

[tool.setuptools_scm]
write_to = "src/nipreps_versions/_version.py"

[tool.black]
extend-exclude = "_version.py"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.7"

[[tool.mypy.overrides]]
module = ["setuptools_scm.version", "setuptools_scm.config"]
ignore_missing_imports = true

[tool.coverage.report]
fail_under = 100
